@@ -22,7 +22,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -68,11 +67,11 @@ public class PluginWalkerTest {
 
 	@Before
 	public void setup() throws Exception {
-		Bundle bundle = FrameworkUtil.getBundle(PluginWalkerTest.this.getClass());
+		Bundle bundle = FrameworkUtil.getBundle(PluginWalkerTest.class);
 		assertNotNull("Make sure you're running this as a plugin test", bundle);
 		assertNotNull(bundle);
 		bundleContext = bundle.getBundleContext();
-		bundlesWithPluginXml = Arrays.asList("org.eclipse.e4.ui.css.swt", "org.eclipse.e4.ui.model.workbench",
+		bundlesWithPluginXml = List.of("org.eclipse.e4.ui.css.swt", "org.eclipse.e4.ui.model.workbench",
 				"org.eclipse.e4.ui.workbench.swt", "org.eclipse.ui.forms", "org.eclipse.ui.themes",
 				"org.eclipse.e4.ui.workbench", "org.eclipse.e4.ui.workbench.addons.swt", "org.eclipse.ui.ide",
 				"org.eclipse.e4.ui.css.core", "org.eclipse.ui.workbench", "org.eclipse.ui.navigator.resources",
